syntax = "proto3";
option java_package = "io.sermant.implement.service.send.netty.pojo";

message NettyMessage{
  enum MessageType {
    SERVICE_DATA = 0;
  }
  MessageType messageType = 1;
  repeated ServiceData serviceData = 2;
}

message ServiceData{
  enum DataType{
    HEARTBEAT_DATA = 0;
    EVENT_DATA = 1;
    TRACING_DATA = 2;
    VISIBILITY_DATA = 3;
  }
  DataType dataType = 1;
  bytes data = 2;
}
